test/typechecker.d/invalid/data3.surc.bad
def enum Boots = { true uhoh }
